--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Compile Include="components/Counter.fs" />
+    <Compile Include="components\ScoreParts.fs" />
     <Compile Include="Main.fs" />
     <Compile Include="Main.test.fs" />
     <Compile Include="App.fs" />
